appId: com.zaimimran.almari
---
- launchApp
- tapOn: "Profile"
- assertVisible: "Profile and settings"
- takeScreenshot: planning/build/onboarding/answers-large-1
- scrollUntilVisible:
    element: "Change: Colours"
    direction: DOWN
- takeScreenshot: planning/build/onboarding/answers-large-2
- scrollUntilVisible:
    element: "Change: Body"
    direction: UP
- tapOn: "Change: Body"
- assertNotVisible: "Skip"
- takeScreenshot: planning/build/onboarding/answers-large-body
- tapOn: "Cancel"
